k8s/apps/misskey/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns-cloudflare.alpha.kubernetes.io/cloudflare-proxied: "true"
  name: misskey
  namespace: misskey
spec:
  hostnames:
    - misskey.walnuts.dev
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - kind: Service
          name: misskey
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
